--- a/contato.html
+++ b/contato.html
@@ -10,11 +10,11 @@
         <nav>
             <a href="./index.html">Home |</a>
             <a href="./aulas.html">Aulas |</a>
-            <a href="./áudios.html">Músicas para programação |</a>
+            <a href="./músicas.html">Músicas para programação |</a>
             <a href="./contato.html">Contato |</a>
         </nav>
         <header>
-            <img src="./img/imagem1.png" alt="banner">
+            <img src="./img/img5.png" alt="">
         </header>
         <section>
             <h1>Entre em contato consoco</h1>
