--- a/músicas.html
+++ b/músicas.html
@@ -16,7 +16,7 @@
         <br>
             <h1>Que tal ouvir um som equanto programa?</h1>
         <Header>
-            <img src="./img/headphones-on-dark-black.JPEG" width="1300PX">
+            <img src="./img/headphones-on-dark-black.JPEG" width="1300PX" height="650px">
         </Header>
             <br>
             <h1>Músicas</h1>
@@ -136,7 +136,7 @@
                     <h2>It's Been A Long Time</h2>
                 <small>Luther Allison</small>
                 <br>
-                <audio src="./Áudios/It's Been A Long Time - Luther Allison.mp3" controls></audio> 
+                <audio src="./Áudios/It_s Been A Long Time - Luther Allison.mp3" controls></audio> 
                 <br>
                 <h3>Letra</h3>
                 <p> Well, it's been a longtime, baby <br>
